[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-jetson-csi-camera-to-jpeg-node"
version = "0.0.1"
dependencies = [
  "make87",
  "make87_messages",
  "opencv-python-headless",
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"


[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []